--- a/calendar/stylesheet/style.css
+++ b/calendar/stylesheet/style.css
@@ -1,6 +1,17 @@
 @import "../../stylesheets/variables.css";
 @import "./badge.css";
+@import "./button.css";
 @import "./calendar-event.css";
+
+.bottom-container {
+    display: flex;
+    margin-top: 36px;
+}
+
+.bottom-container .push {
+    flex-grow: 1;
+    height: 1px;
+}
 
 body {
     background-color: var(--background);
