--- a/calendar/stylesheets/style.css
+++ b/calendar/stylesheets/style.css
@@ -16,12 +16,14 @@
 body {
     background-color: var(--background);
     padding:50px;
-    font: 14px/1.5 BlinkMacSystemFont, -apple-system, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
+    font-family: "Nanum Gothic", sans-serif;
+    font-size: 14px/1.5;
     color: var(--text-color);
     font-weight:400;
   }
   
   h1, h2, h3, h4, h5, h6 {
+    font-family: "Bebas Neue", sans-serif;
     color:var(--heading-color);
     margin:0 0 20px;
   }
