--- a/calendar/stylesheets/style.css
+++ b/calendar/stylesheets/style.css
@@ -17,9 +17,8 @@ body {
     background-color: var(--background);
     padding:50px;
     font-family: "Nanum Gothic", sans-serif;
-    font-size: 14px/1.5;
+    font-size: 1em;
     color: var(--text-color);
-    font-weight:400;
   }
   
   h1, h2, h3, h4, h5, h6 {
