video in the background only on smaller screens

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -166,7 +166,6 @@ body {
   word-wrap: break-word;
 }
 
-/*
 body:before {
   content: "";
   display: block;
@@ -184,20 +183,21 @@ body:before {
       rgba(33, 34, 41, 0.859),
       rgba(33, 34, 41, 0.859)
     ),
-    url("../assets/images/bg.gif");
+    url("../assets/images/bg.jpg");
   background-position: 0% 0%, center;
   background-repeat: repeat, no-repeat;
   background-size: auto, cover;
   background-color: #000000;
 }
-*/
 
+/* video in the background is made visible only for smaller screens  */
 #bgVideo {
   position: fixed;
   right: 0;
   bottom: 0;
   min-width: 100%;
   min-height: 100%;
+  visibility: hidden;
 }
 
 body:after {
@@ -1179,6 +1179,10 @@ hr.style1:before {
 }
 
 @media (max-width: 736px) {
+  #bgVideo {
+    visibility: visible;
+  }
+
   html {
     font-size: 11pt;
   }
