--- a/calendar/stylesheets/badge.css
+++ b/calendar/stylesheets/badge.css
@@ -2,6 +2,7 @@
     border: 2px solid var(--text-color);
     border-radius: var(--edge-radius);
     padding: 12px;
+    margin: auto;
 }
 
 .badge-primary {
