--- a/calendar/stylesheets/style.css
+++ b/calendar/stylesheets/style.css
@@ -247,6 +247,26 @@ body {
       right:50px;
       top:52px;
     }
+
+    /* spread calendar button on smaller screens */
+    .bottom-container {
+      justify-content: center;
+    }
+
+    .bottom-container .push {
+        flex-grow: 0;
+        height: 0px;
+    }
+
+    .bottom-container > button {
+      display: flex;
+      width: 100%;
+    }
+
+    a.button.btn.btn-primary {
+      margin: auto;
+      width: 100%;
+    }
   }
   
   @media print, screen and (max-width: 720px) {
