--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -7,6 +7,11 @@ header {
   display: none;
 }
 
+section {
+  width: 100%;
+  float: left; 
+}
+
 body {
   font-family: "Nanum Gothic", sans-serif;
 }
