--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -1,2 +1,2 @@
-<link href="./assets/images/favicon.ico" rel="shortcut icon" />
+<link href="../assets/images/favicon.ico" rel="shortcut icon" />
 <link href="https://fonts.googleapis.com/css2?display=swap&family=Nanum+Gothic:ital,wght@0,400;1,400&family=Bebas+Neue:ital,wght@0,400;1,400&family=Inter:ital,wght@0,500;1,500" rel="stylesheet" type="text/css" />
