--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -30,4 +30,13 @@ body {
 
 h1 {
   font-family: "Bebas Neue", sans-serif;
+  margin-top: 100px;
+}
+
+h2 {
+  margin-top: 60px;
+}
+
+h3 {
+  margin-top: 50px;
 }
