added meta information for guides

--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -1,2 +1,8 @@
+<meta name="keywords" content="Tierrecht, Aktivismus, Tierrechtsaktivismus, Anonymous, Voiceless, Z&uuml;rich, Basel, Aarau, Schweiz, Cube, Truth, Vegan, Animal, Rights, Switzerland"/>
+<meta name="language" content="Deutsch, de" />
+<meta name="revisit-after" content="9 days" />
+<meta name="robots" content="index" />
+<meta name="robots" content="follow" />
+<meta name="author" content="Anonymous for Animal Rights Switzerland" />
 <link href="../assets/images/favicon.ico" rel="shortcut icon" />
 <link href="https://fonts.googleapis.com/css2?display=swap&family=Nanum+Gothic:ital,wght@0,400;1,400&family=Bebas+Neue:ital,wght@0,400;1,400&family=Inter:ital,wght@0,500;1,500" rel="stylesheet" type="text/css" />
